Collection API Улучшения[#98305]